--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -33,9 +33,9 @@ layout: default
       {{ content }}
     </div>
 
-    {% if page.news %}
+    <!-- {% if page.news %}
       {% include news.html %}
-    {% endif %}
+    {% endif %} -->
 
     {% if page.selected_papers %}
       {% include selected_papers.html %}
