run script added and email changed

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -10,7 +10,7 @@ layout: default
      <b>Hun</b> Namkung
     </h1>
      <!-- <p class="desc">{{ page.description }}</p> -->
-     hnamkung@andrew.cmu.edu
+     hnamkung15@gmail.com
       <!-- | <a href="https://www.linkedin.com/in/hun-namkung-14a07b221/">linkedin</a> -->
     </header>
     <br>
