--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -134,7 +134,7 @@
       {% endif %}
     {% endif %}
     {% if entry.website %}
-      <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button" target="_blank">Website</a>
+      <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button" target="_blank">Video</a>
     {% endif %}
     </div>
 
